--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             const TREEX = CANVASWIDTH / 2;
             const TREEY = 100;            
-            const BACKGROUNDCOLOR ='#e9e0b3';
+            const BACKGROUNDCOLOR ='#ffffff';
 
             function setup() {
                 var canvas = createCanvas(CANVASWIDTH, CANVASHEIGHT);
